--- a/templates/results.html
+++ b/templates/results.html
@@ -1,109 +1,142 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css">
+  <head>
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
+    />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <link rel="stylesheet" href="https://assets.scryfall.com/assets/scryfall-e47a8aca5cd3f253a83ba049d891d7a43512c64ef8b21a76bcee15296753d618.css" media="all" />
+    <link
+      rel="stylesheet"
+      href="https://assets.scryfall.com/assets/scryfall-e47a8aca5cd3f253a83ba049d891d7a43512c64ef8b21a76bcee15296753d618.css"
+      media="all"
+    />
     <style>
+      body {
+        height: 100%;
+        width: 100%;
+        margin: 0;
+        padding: 0;
+        background: #2b253a !important;
+      }
 
-body {
-height: 100%;
-width: 100%;
-margin: 0;
-padding: 0;
-background: #2B253A !important
-}
+      .search {
+        margin-bottom: auto;
+        margin-top: 20px;
+        height: 70px;
+        background-color: #fff;
+        padding: 10px;
+      }
 
+      .search-input {
+        color: white;
+        border: 0;
+        outline: 0;
+        background: none;
+        width: 0;
+        margin-top: 5px;
+        caret-color: transparent;
+        line-height: 40px;
+        transition: width 0.4s linear;
+      }
 
-.search {
-    margin-bottom: auto;
-    margin-top: 20px;
-    height: 70px;
-    background-color: #fff;
-    padding: 10px
-}
+      .search .search-input {
+        padding: 0 10px;
+        width: 550px;
+        caret-color: #536bf6;
+        font-size: 21px;
+        font-weight: 300;
+        color: black;
+        transition: width 0.4s linear;
+      }
 
-.search-input {
-    color: white;
-    border: 0;
-    outline: 0;
-    background: none;
-    width: 0;
-    margin-top: 5px;
-    caret-color: transparent;
-    line-height: 40px;
-    transition: width 0.4s linear
-}
+      .search:hover > .search-icon {
+        background: #1a237e;
+        color: #fff;
+      }
 
-.search .search-input {
-    padding: 0 10px;
-    width: 550px;
-    caret-color: #536bf6;
-    font-size: 21px;
-    font-weight: 300;
-    color: black;
-    transition: width 0.4s linear
-}
+      .search-icon {
+        height: 50px;
+        width: 50px;
+        float: right;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        color: white;
+        background-color: #2b253a;
+      }
 
-.search:hover>.search-icon {
-    background: #1A237E;
-    color: #fff
-}
-
-.search-icon {
-    height: 50px;
-    width: 50px;
-    float: right;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    color: white;
-    background-color: #2B253A
-}
-
-a:link {
-    text-decoration: none
-}
-.myGallery {
-  display: grid;
-  margin-top: 50px;
-  margin-left: auto;
-  margin-right: auto;
-  width: 1000px;
-  grid-gap: 5px;
-  grid-template-columns: 1fr 1fr 1fr 1fr;
-}    </style>
-</head>
-<body>
-<div id="wrapper">
-    <div class="d-flex justify-content-center h-100">
+      a:link {
+        float: right;
+        margin-right: 10px;
+        color: #897d9c;
+        text-decoration: none;
+      }
+      .myGallery {
+        display: grid;
+        margin-top: 50px;
+        margin-left: auto;
+        margin-right: auto;
+        width: 1000px;
+        grid-gap: 5px;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+      }
+    </style>
+  </head>
+  <body>
+    <a href="{{url_for('logout')}}">Logout</a><br />
+    <div id="wrapper">
+      <div class="d-flex justify-content-center h-100">
         <div class="search">
-            <form method="post">
-            <input type="search" class="search-input" placeholder="{{msg}}" name="q" value="{{ request.form['q'] }}">
-                <button name="search" class="search-icon" value="{{ request.form['q'] }}"><i class="fa fa-search"></i></button>
-            </form>
+          <form method="post">
+            <input
+              type="search"
+              class="search-input"
+              placeholder="{{msg}}"
+              name="q"
+              value="{{ request.form['q'] }}"
+            />
+            <button
+              name="search"
+              class="search-icon"
+              value="{{ request.form['q'] }}"
+            >
+              <i class="fa fa-search"></i>
+            </button>
+          </form>
         </div>
-    </div>
+      </div>
 
-    <div class="card-grid" >
-      <div class="card-grid-inner">
+      <div class="card-grid">
+        <div class="card-grid-inner">
           {% for image_url in card%}
-          <div class="card-grid-item"  >
-            <a class="card-grid-item-card" href="https://scryfall.com/card/war/54/jace-wielder-of-mysteries" >
-              <span class="card-grid-item-invisible-label" aria-hidden="true">Jace, Wielder of Mysteries</span>
+          <div class="card-grid-item">
+            <a
+              class="card-grid-item-card"
+              href="https://scryfall.com/card/war/54/jace-wielder-of-mysteries"
+            >
+              <span class="card-grid-item-invisible-label" aria-hidden="true"
+                >Jace, Wielder of Mysteries</span
+              >
               <div class="card-grid-item-card-faces">
                 <div class="card-grid-item-card-front">
-                  <img class="card c15 border-black " src="{{ image_url }}" />
+                  <img class="card c15 border-black" src="{{ image_url }}" />
                 </div>
               </div>
             </a>
           </div>
           {% endfor %}
+        </div>
       </div>
     </div>
-</div>
-</body>
+  </body>
 </html>
