Refactored whoosh index stuff out of main.py

--- a/templates/results.html
+++ b/templates/results.html
@@ -20,6 +20,7 @@
       href="https://assets.scryfall.com/assets/scryfall-e47a8aca5cd3f253a83ba049d891d7a43512c64ef8b21a76bcee15296753d618.css"
       media="all"
     />
+    <title>Magic The Gathering</title>
     <style>
       body {
         height: 100%;
@@ -96,6 +97,7 @@
     <a href="{{url_for('logout')}}">Logout</a><br />
     <div id="wrapper">
       <div class="d-flex justify-content-center h-100">
+        <!--TODO: add a MTG picture that links to the home page to the left of the search bar-->
         <div class="search">
           <form method="post">
             <input
