--- a/templates/login.html
+++ b/templates/login.html
@@ -11,7 +11,7 @@
     <title>Login</title>
     <style>
       .back {
-        background: #e2e2e2;
+        background: #2b253a;
         width: 100%;
         position: absolute;
         top: 0;
