--- a/templates/results.html
+++ b/templates/results.html
@@ -17,7 +17,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
     <link
       rel="stylesheet"
-      href="https://assets.scryfall.com/assets/scryfall-5717643cbc036f6b053ed0373e657a3ff17d1a4a5639bbaeec3a4f06fbc33a65.css"
+      href="{{ url_for('static',filename='templates.css') }}"
       media="all"
     />
     <title>Magic The Gathering</title>
