--- a/templates/card.html
+++ b/templates/card.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" href="https://assets.scryfall.com/assets/scryfall-5717643cbc036f6b053ed0373e657a3ff17d1a4a5639bbaeec3a4f06fbc33a65.css" media="all" />
+    <link rel="stylesheet" href="{{ url_for('static',filename='templates.css') }}" media="all" />
     <meta charset="UTF-8">
 </head>
 <body>
