--- a/templates/card.html
+++ b/templates/card.html
@@ -5,13 +5,15 @@
     <meta charset="UTF-8">
 </head>
 <body>
-<p>{{ card }}</p>
   <div class="card-profile">
   <div class="inner-flex ">
     <div class="card-image">
       <div class="card-image-front">
         <img class="card c15 border-black " src="https://c1.scryfall.com/file/scryfall-cards/large/front/2/f/2f025c11-feeb-429b-9518-f24d70596601.jpg?1562733199" />
       </div>
+    </div>
+    <div class="card-text">
+      <p>card text will go here soon :)</p>
     </div>
   </div>
   </div>
@@ -20,6 +22,7 @@
     <div class="inner-flex ">
           <div class="card-grid">
         <div class="card-grid-inner">
+          {% for i in range(1,5) %}
           <div class="card-grid-item">
             <a class="card-grid-item-card" href="">
               <span class="card-grid-item-invisible-label" aria-hidden="true"
@@ -35,6 +38,7 @@
               </div>
             </a>
           </div>
+        {% endfor %}
         </div>
       </div>
     </div>
