--- a/templates/card.html
+++ b/templates/card.html
@@ -9,11 +9,11 @@
   <div class="inner-flex ">
     <div class="card-image">
       <div class="card-image-front">
-        <img class="card c15 border-black " src="https://c1.scryfall.com/file/scryfall-cards/large/front/2/f/2f025c11-feeb-429b-9518-f24d70596601.jpg?1562733199" />
+        <img class="card c15 border-black " src="{{ card[0].image_url }}" />
       </div>
     </div>
     <div class="card-text">
-      <p>card text will go here soon :)</p>
+      <p>{{ card[0].desc }}</p>
     </div>
   </div>
   </div>
