--- a/templates/results.html
+++ b/templates/results.html
@@ -94,7 +94,9 @@
     </style>
   </head>
   <body>
-    <a href="{{url_for('logout')}}">Logout</a><br />
+    <a href="{{ url_for('logout') }}">Logout</a>
+    <a href="{{ url_for('decks') }}">Decks</a>
+    <br />
     <div id="wrapper">
       <div class="d-flex justify-content-center h-100">
         <!--TODO: add a MTG picture that links to the home page to the left of the search bar-->
