--- a/templates/decks.html
+++ b/templates/decks.html
@@ -11,10 +11,19 @@
     />
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <title>MTG: Decks</title>
-    <style></style>
+    <title>MTG Decks</title>
+    <style>
+      a:link {
+        float: right;
+        margin-right: 10px;
+        color: #897d9c;
+        text-decoration: none;
+      }
+    </style>
   </head>
   <body>
+    <a href="{{ url_for('logout') }}">Logout</a>
+    <br />
     <h2>Decks Page</h2>
   </body>
 </html>
