cleaned up functions, added link to home to pages

--- a/templates/card.html
+++ b/templates/card.html
@@ -16,6 +16,7 @@
 <body>
   <a href="{{ url_for('logout') }}">Logout</a>
   <a href="{{ url_for('decks') }}">Decks</a>
+  <a href="{{ url_for('home') }}">Home</a>
   <br />
   <div class="card-profile">
   <div class="inner-flex ">
