--- a/templates/results.html
+++ b/templates/results.html
@@ -96,6 +96,7 @@
   <body>
     <a href="{{ url_for('logout') }}">Logout</a>
     <a href="{{ url_for('decks') }}">Decks</a>
+    <a href="{{ url_for('home') }}">Home</a>
     <br />
     <div id="wrapper">
       <div class="d-flex justify-content-center h-100">
