--- a/templates/decks.html
+++ b/templates/decks.html
@@ -23,6 +23,7 @@
   </head>
   <body>
     <a href="{{ url_for('logout') }}">Logout</a>
+    <a href="{{ url_for('home') }}">Home</a>
     <br />
     <h2>Decks Page</h2>
   </body>
