--- a/templates/decks.html
+++ b/templates/decks.html
@@ -1,16 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://use.fontawesome.com/releases/v5.7.2/css/all.css"
-    />
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.bundle.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    >
     <title>MTG Decks</title>
     <style>
       a:link {
@@ -24,7 +22,16 @@
   <body>
     <a href="{{ url_for('logout') }}">Logout</a>
     <a href="{{ url_for('home') }}">Home</a>
-    <br />
-    <h2>Decks Page</h2>
+    <br>
+    <div class="container">
+      <div class="row">
+        <div class="col">Name</div>
+      </div>
+      {% for deck, card, cards in decks %}
+        <div class="row">
+          <div class="g-col-4">{{ deck.name }}</div>
+        </div>
+      {% endfor %}
+    </div>
   </body>
 </html>
