--- a/templates/decks.html
+++ b/templates/decks.html
@@ -2,13 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
-      crossorigin="anonymous"
-    >
     <title>MTG Decks</title>
     <style>
       a:link {
@@ -23,15 +16,18 @@
     <a href="{{ url_for('logout') }}">Logout</a>
     <a href="{{ url_for('home') }}">Home</a>
     <br>
-    <div class="container">
-      <div class="row">
-        <div class="col">Name</div>
-      </div>
-      {% for deck, card, cards in decks %}
-        <div class="row">
-          <div class="g-col-4">{{ deck.name }}</div>
-        </div>
+      {% for deck in decks %}
+        <div>{{ deck.name }}</div>
+        <div>&ensp; Main</div>
+        {% for card in deck.main %}
+          <div>&emsp; {{ card.id }} {{ card.name }}</div>
+        {% endfor %}
+        {% if deck.sideboard|length > 0 %}
+          <div>&ensp; Sideboard</div>
+          {% for card in deck.sideboard %}
+            <div>&emsp; {{ card.id }} {{ card.name }}</div>
+          {% endfor %}
+        {% endif %}
       {% endfor %}
-    </div>
   </body>
 </html>
