--- a/templates/decks.html
+++ b/templates/decks.html
@@ -2,6 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
+      crossorigin="anonymous"
+    >
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+      crossorigin="anonymous"
+    ></script>
     <title>MTG Decks</title>
     <style>
       a:link {
@@ -16,18 +27,18 @@
     <a href="{{ url_for('logout') }}">Logout</a>
     <a href="{{ url_for('home') }}">Home</a>
     <br>
-      {% for deck in decks %}
-        <div>{{ deck.name }}</div>
-        <div>&ensp; Main</div>
-        {% for card in deck.main %}
-          <div>&emsp; {{ card.id }} {{ card.name }}</div>
-        {% endfor %}
-        {% if deck.sideboard|length > 0 %}
-          <div>&ensp; Sideboard</div>
-          {% for card in deck.sideboard %}
-            <div>&emsp; {{ card.id }} {{ card.name }}</div>
-          {% endfor %}
-        {% endif %}
+    {% for deck in decks %}
+      <div>{{ deck.name }}</div>
+      <div>&emsp; Main</div>
+      {% for card in deck.main %}
+        <div>&emsp;&emsp; {{ card.id }} {{ card.name }}</div>
       {% endfor %}
+      {% if deck.sideboard|length > 0 %}
+        <div>&emsp; Sideboard</div>
+        {% for card in deck.sideboard %}
+          <div>&emsp;&emsp; {{ card.id }} {{ card.name }}</div>
+        {% endfor %}
+      {% endif %}
+    {% endfor %}
   </body>
 </html>
