option 1 (progress report) suggestions working

--- a/templates/card.html
+++ b/templates/card.html
@@ -55,7 +55,7 @@
                 <div class="card-grid-item-card-front">
                   <img
                     class="card c15 border-black"
-                    src="https://c1.scryfall.com/file/scryfall-cards/large/front/2/f/2f025c11-feeb-429b-9518-f24d70596601.jpg?1562733199"
+                    src="{{ suggestions[i].image_url }}"
                   />
                 </div>
               </div>
