--- a/templates/card.html
+++ b/templates/card.html
@@ -47,7 +47,7 @@
       <div class="card-grid-inner">
         {% for i in range(4) %}
           <div class="card-grid-item">
-            <a class="card-grid-item-card" href="{{ url_for('card_page', card_name=suggestions[i].name) }}">
+            <a class="card-grid-item-card" href="{{ url_for('card_page', card_id=suggestions[i].id) }}">
               <span class="card-grid-item-invisible-label" aria-hidden="true">
                 {{ suggestions[i].name }}
               </span>
