--- a/templates/card.html
+++ b/templates/card.html
@@ -1,8 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <link rel="stylesheet" href="{{ url_for('static',filename='templates.css') }}" media="all" />
-    <meta charset="UTF-8">
+  <head>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static',filename='templates.css') }}"
+      media="all"
+    />
+    <meta charset="UTF-8" />
     <title>{{ card.name }}</title>
     <style>
       a:link {
@@ -12,59 +16,62 @@
         text-decoration: none;
       }
     </style>
-</head>
-<body>∫
-  <a href="{{ url_for('logout') }}">Logout</a>
-  <a href="{{ url_for('decks') }}">Decks</a>
-  <a href="{{ url_for('home') }}">Home</a>
-  <br />
-  <div class="card-profile">
-  <div class="inner-flex ">
-    <div class="card-image">
-      <div class="card-image-front">
-        <img class="card c15 border-black " src="{{ card.image_url }}" />
-      </div>
-    </div>
-    <div class="card-text">
-        <h1 class="card-text-title" lang="en">
-          <span class="card-text-card-name">{{ card.name }}</span>
-        </h1>
-      <p class="card-text-type-line">{{ card.types }}</p>
-      <div class="card-text-oracle">
-        <p>{{ card.desc }}</p>
-      </div>
-      <div class="card-text-flavor">
-      <p>{{ card.flavor }}</p>
-      </div>
-
-    </div>
-  </div>
-  </div>
-
-  <div class="card-profile">
-  <div class="inner-flex ">
-    <div class="card-grid">
-      <div class="card-grid-inner">
-        {% for i in range(4) %}
-          <div class="card-grid-item">
-            <a class="card-grid-item-card" href="{{ url_for('card_page', card_id=suggestions[i].id) }}">
-              <span class="card-grid-item-invisible-label" aria-hidden="true">
-                {{ suggestions[i].name }}
-              </span>
-              <div class="card-grid-item-card-faces">
-                <div class="card-grid-item-card-front">
-                  <img
-                    class="card c15 border-black"
-                    src="{{ suggestions[i].image_url }}"
-                  />
-                </div>
-              </div>
-            </a>
+  </head>
+  <body>
+    ∫
+    <a href="{{ url_for('logout') }}">Logout</a>
+    <a href="{{ url_for('decks') }}">Decks</a>
+    <a href="{{ url_for('home') }}">Home</a>
+    <br />
+    <div class="card-profile">
+      <div class="inner-flex">
+        <div class="card-image">
+          <div class="card-image-front">
+            <img class="card c15 border-black" src="{{ card.image_url }}" />
           </div>
-        {% endfor %}
+        </div>
+        <div class="card-text">
+          <h1 class="card-text-title" lang="en">
+            <span class="card-text-card-name">{{ card.name }}</span>
+          </h1>
+          <p class="card-text-type-line">{{ card.types }}</p>
+          <div class="card-text-oracle">
+            <p>{{ card.desc }}</p>
+          </div>
+          <div class="card-text-flavor">
+            <p>{{ card.flavor }}</p>
+          </div>
+        </div>
       </div>
     </div>
-  </div>
-  </div>
-</body>
+
+    <div class="card-profile">
+      <div class="inner-flex">
+        <div class="card-grid">
+          <div class="card-grid-inner">
+            {% for i in range(4) %}
+            <div class="card-grid-item">
+              <a
+                class="card-grid-item-card"
+                href="{{ url_for('card_page', card_id=suggestions[i].id) }}"
+              >
+                <span class="card-grid-item-invisible-label" aria-hidden="true">
+                  {{ suggestions[i].name }}
+                </span>
+                <div class="card-grid-item-card-faces">
+                  <div class="card-grid-item-card-front">
+                    <img
+                      class="card c15 border-black"
+                      src="{{ suggestions[i].image_url }}"
+                    />
+                  </div>
+                </div>
+              </a>
+            </div>
+            {% endfor %}
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
