--- a/templates/decks.html
+++ b/templates/decks.html
@@ -1,13 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <link
       href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css"
       rel="stylesheet"
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
-    >
+    />
     <script
       src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
@@ -15,6 +15,14 @@
     ></script>
     <title>MTG Decks</title>
     <style>
+      .back {
+        /* background: #2b253a; */
+        background: #ecebef; /* temp for testing */
+        width: 100%;
+        position: absolute;
+        top: 0;
+        bottom: 0;
+      }
       a:link {
         float: right;
         margin-right: 10px;
@@ -24,21 +32,44 @@
     </style>
   </head>
   <body>
-    <a href="{{ url_for('logout') }}">Logout</a>
-    <a href="{{ url_for('home') }}">Home</a>
-    <br>
-    {% for deck in decks %}
-      <div>{{ deck.name }}</div>
-      <div>&emsp; Main</div>
-      {% for card in deck.main %}
-        <div>&emsp;&emsp; {{ card.id }} {{ card.name }}</div>
-      {% endfor %}
-      {% if deck.sideboard|length > 0 %}
-        <div>&emsp; Sideboard</div>
-        {% for card in deck.sideboard %}
-          <div>&emsp;&emsp; {{ card.id }} {{ card.name }}</div>
+    <div class="back">
+      <a href="{{ url_for('logout') }}">Logout</a>
+      <a href="{{ url_for('home') }}">Home</a>
+      <br />
+      <div class="accordian" id="accordionPanelsStayOpenExample">
+        {% for deck in decks %}
+        <div class="accordion-item">
+          <h2 class="accordian-header" id="panelsStayOpen-heading{{deck.id}}">
+            <button
+              class="accordion-button collapsed"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#panelsStayOpen-collapse{{deck.id}}"
+              aria-expanded="false"
+              aria-controls="panelsStayOpen-collapse{{deck.id}}"
+            >
+              {{ deck.name }}
+            </button>
+          </h2>
+          <div
+            id="panelsStayOpen-collapse{{deck.id}}"
+            class="accordion-collapse collapse"
+            aria-labelledby="panelsStayOpen-heading{{deck.id}}"
+          >
+            <div class="accordion-body">
+              <div>&emsp; Main</div>
+              {% for card in deck.main %}
+              <div>&emsp;&emsp; {{ card.id }} {{ card.name }}</div>
+              {% endfor %} {% if deck.sideboard|length > 0 %}
+              <div>&emsp; Sideboard</div>
+              {% for card in deck.sideboard %}
+              <div>&emsp;&emsp; {{ card.id }} {{ card.name }}</div>
+              {% endfor %} {% endif %}
+            </div>
+          </div>
+        </div>
         {% endfor %}
-      {% endif %}
-    {% endfor %}
+      </div>
+    </div>
   </body>
 </html>
