--- a/templates/deck.html
+++ b/templates/deck.html
@@ -13,15 +13,8 @@
       integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
       crossorigin="anonymous"
     ></script>
-    <title>MTG Decks</title>
+    <title>MTG Deck</title>
     <style>
-      .deck-col {
-        height: 100%;
-        overflow-y: scroll;
-      }
-      .row-height {
-        height: 100vh;
-      }
       a:link {
         float: right;
         margin-right: 10px;
@@ -35,54 +28,11 @@
     <a href="{{ url_for('home') }}">Home</a>
     <br />
     <div class="container-fluid">
-      <div class="row row-height">
-        <div class="col-3 deck-col">
-          <div class="accordian" id="accordionPanelsStayOpenExample">
-            {% for deck in decks %}
-            <div class="accordion-item">
-              <h2
-                class="accordian-header"
-                id="panelsStayOpen-heading{{deck.id}}"
-              >
-                <button
-                  class="accordion-button collapsed"
-                  type="button"
-                  data-bs-toggle="collapse"
-                  data-bs-target="#panelsStayOpen-collapse{{deck.id}}"
-                  aria-expanded="false"
-                  aria-controls="panelsStayOpen-collapse{{deck.id}}"
-                >
-                  {{ deck.name }}
-                </button>
-              </h2>
-              <div
-                id="panelsStayOpen-collapse{{deck.id}}"
-                class="accordion-collapse collapse"
-                aria-labelledby="panelsStayOpen-heading{{deck.id}}"
-              >
-                <div class="accordion-body">
-                  <div class="row">
-                    <div>&emsp; Main</div>
-                    {% for card in deck.main %}
-                    <!-- <a href="{{ url_for(card_page, card_=card.id) }}"> -->
-                    <!-- working on adding links to cards right here -->
-                    <div>&emsp;&emsp; {{ card.name }} {{ card.count }}</div>
-                    <!-- </a> -->
-                    {% endfor %} {% if deck.sideboard|length > 0 %}
-                    <div>&emsp; Sideboard</div>
-                    {% for card in deck.sideboard %}
-                    <div>&emsp;&emsp; {{ card.name }} {{ card.count }}</div>
-                    {% endfor %} {% endif %}
-                  </div>
-                </div>
-              </div>
-            </div>
-            {% endfor %}
-          </div>
-        </div>
-        <div class="col">
-          <p>hello world</p>
-        </div>
+      {% for card in deck %}
+      <div>{{ card.name }} {{ card.count }}</div>
+      {% endfor %}
+      <div class="col">
+        <p>hello world</p>
       </div>
     </div>
   </body>
