--- a/templates/card.html
+++ b/templates/card.html
@@ -15,6 +15,30 @@
         color: #897d9c;
         text-decoration: none;
       }
+      .button {
+        background-color: #4CAF50;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
+        .button2 {
+        background-color: #f44336;
+        border: none;
+        color: white;
+        padding: 15px 32px;
+        text-align: center;
+        text-decoration: none;
+        display: inline-block;
+        font-size: 16px;
+        margin: 4px 2px;
+        cursor: pointer;
+      }
     </style>
   </head>
   <body>
@@ -40,6 +64,12 @@
           </div>
           <div class="card-text-flavor">
             <p>{{ card.flavor }}</p>
+          </div>
+          <div class="buttons">
+            <form method="post">
+              <input type="submit" class="button" name="add" value="ADD card">
+              <input type="submit" class="button2" name="del" value="Delete card">
+            </form>
           </div>
         </div>
       </div>
