--- a/templates/deck.html
+++ b/templates/deck.html
@@ -34,10 +34,13 @@
         max-width: 25%;
         border-radius: 20px;
         display: none;
-    }
-
+      }
       .list:hover img {
         display: block;
+      }
+      h3 {
+        text-align: center;
+        color: #897d9c;
       }
     </style>
   </head>
@@ -46,15 +49,17 @@
     <a href="{{ url_for('home') }}" id="route-link">Home</a>
     <br />
     <div class="container-fluid">
+      {% if deck|length == 0 %}
+      <h3>You have 0 cards in your deck</h3>
+      {% endif %}
       {% for card in deck %}
       <a href="{{ url_for('card_page', card_id=card.id) }}">
         <div class="list">
           {{ card.name }} {{ card.count }}
-          <img src="{{ card.image_url }}">
+          <img src="{{ card.image_url }}" />
         </div>
       </a>
       {% endfor %}
     </div>
-
   </body>
 </html>
